--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>nl.suriani</groupId>
     <artifactId>jadeval</artifactId>
-    <version>0.2.0</version>
+    <version>0.2.1-SNAPSHOT</version>
     <name>Jadeval</name>
     <description>Just A DEcision and VAlidation Library</description>
 
@@ -17,7 +17,7 @@
         <connection>scm:git:git://github.com/TristanoSuriani/jadeval.git</connection>
         <developerConnection>scm:git:git@github.com:TristanoSuriani/jadeval.git</developerConnection>
         <url>https://github.com/TristanoSuriani/jadeval</url>
-      <tag>jadeval-0.2.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <profiles>
