--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nl.suriani</groupId>
     <artifactId>jadeval</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1</version>
     <name>Jadeval</name>
     <description>Just A DEcision and VAlidation Library</description>
 
@@ -18,7 +17,7 @@
         <connection>scm:git:git://github.com/TristanoSuriani/jadeval.git</connection>
         <developerConnection>scm:git:git@github.com:TristanoSuriani/jadeval.git</developerConnection>
         <url>https://github.com/TristanoSuriani/jadeval</url>
-        <tag>HEAD</tag>
+        <tag>jadeval-0.2.1</tag>
     </scm>
 
     <url>https://github.com/TristanoSuriani/jadeval</url>
